# DeepfakeBench

./: .gitignore  INSTALL_README.md  pyproject.toml  rocm_uv_install.sh  training_script.sh
preprocessing/dataset_json/: UADFV.json
tools/: migrate_tb_to_wandb.py  migration_config.yaml  run_migration.py
training/: test.py  train.py
training/config/: train_config.yaml
training/config/detector/: effort.yaml  effort_causal.yaml  effort_ce.yaml  effort_ce_counterfactual.yaml  effort_ce_hsic.yaml  effort_ce_hsic_masked_counterfactual_backbone.yaml  effort_ce_hsic_orthogonal.yaml  effort_ce_hsic_orthogonal_masked_counterfactual.yaml  effort_ce_hsic_orthogonal_masked_counterfactual_backbone.yaml  effort_ce_hsic_orthogonal_weight.yaml  effort_ce_hsic_orthogonal_weight_masked_counterfactual_backbone.yaml  (+5 more)
training/dataset/: abstract_dataset.py  ff_blend.py  lsda_dataset.py
training/detectors/: __init__.py  altfreezing_detector.py  capsule_net_detector.py  clip_detector.py  core_detector.py  efficientnetb4_detector.py  effort_causal_detector.py  effort_custom_detector.py  effort_detector.py  effort_detector_paper.py  effort_hsic_ce_detector.py  f3net_detector.py  facexray_detector.py  ffd_detector.py  ftcn_detector.py  fwa_detector.py  iid_detector.py  lrl_detector.py  lsda_detector.py  meso4Inception_detector.py  meso4_detector.py  pcl_xception_detector.py  recce_detector.py  resnet34_detector.py  rfm_detector.py  sbi_detector.py  sladd_detector.py  spsl_detector.py  srm_detector.py  stil_detector.py  ucf_detector.py  videomae_detector.py  xception_detector.py
training/loss/: __init__.py  causal_loss.py  counterfactual_loss.py  hsic_loss.py  independence_loss.py
training/trainer/: trainer.py
